Initial version of backgrounds for BarGraphs. The colour of the background is defined in /themes/themename/stylename.css. As an example see /themes/xhtml/xhtml.css. For any styles that do not define a colour, the background will simply be invisible, so older styles won't break as a result of this. Discussion of this is in Issue 15.

--- a/themes/xhtml/xhtml.css
+++ b/themes/xhtml/xhtml.css
@@ -79,6 +79,13 @@ div.bar
   font-size: 4px;
 }
 
+div.bar-background
+{
+    height: 6px;
+    background: #7F0F1E;
+    font-size: 4px;
+}
+
 div.bar-red
 {
   height: 8px;
